--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_below="@+id/qu"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10sp"
-        android:text="Randome Text"
+        android:text="Random Text"
         android:textColor="#231C07"
         android:textSize="20sp" />
 
@@ -56,7 +56,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
-        android:text="Created with ❤ by Team Reboot Rebels"
+        android:text="Created with ❤ by Team Master Blasters"
         android:textColor="#231C07"
         android:textSize="12sp" />
 
@@ -66,7 +66,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:text="Powered by HackforShe"
+        android:text="Powered by API Hacks"
         android:textColor="#231C07"
         android:textSize="12sp" />
 
